Fix the custom time text field not showing up

--- a/css/main.less
+++ b/css/main.less
@@ -225,12 +225,13 @@ body {
     }
 
     &:hover {
+      cursor: pointer;
+
       .edit-button {
         display: block;
 
         &:hover {
           background-color: #eee;
-          cursor: pointer;
 
           &:before {
             color: black;
@@ -383,6 +384,7 @@ body {
     font-family: 'Roboto', sans-serif;
     height: 40px;
     width: 100%;
+    font-size: 15px;
     margin-bottom: @content-padding;
     background: white;
 
